# hap-adobe-apple-silicon

./: .gitignore  CMakeLists.txt  NOTICE.md  README-APPLE-SILICON.md  README.md
codec/: codec.cpp  codec.hpp
docs/release/: apple-silicon-notes.md  ffmpeg-lgpl-compliance.md  publication-checklist.md  sources.md
installer/: CPack.distribution.dist.in  CodecInstaller.cmake  LegacyQuickTimeCleanup.txt  ReadMe.txt  legacy-quicktime-cleanup-postinstall
scripts/: build-arm64-package.sh  make-ffmpeg-source-archive.sh  notarize-package.sh  sign-package.sh
